--- a/README.org
+++ b/README.org
@@ -8,4 +8,4 @@
 
 * Roadmap
 
-- [ ] Fix ~dap-mode~ (missing ~treemacs~ even though it is there).
+- [X] Fix ~dap-mode~ (missing ~treemacs~ even though it is there).
